修改左侧布局与年度审验业户记录、注销退出业户记录、企业违章记录、营运船舶信息、船舶类型代码等等

--- a/beauty-project/traffic/src/main/webapp/tpl/tra/waterwayYunZheng.businessHouseholds.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/waterwayYunZheng.businessHouseholds.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="WaterwayYunZhengAuxiliaryCtrl">
+<div ng-controller="WaterwayYunZhengBusinessHouseholdsCtrl">
 
   <div class="wrapper bg-light lter b-b">
     <div id="myTabContent" class="tab-content" >
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class="table-responsive" style="overflow: auto">
-            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='trash'">
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='a'">
               <thead>
               <tr>
                 <th ng-repeat="info in tableTitle[0]">{{info}}</th>
@@ -36,7 +36,7 @@
               </tr>
               </tbody>
             </table>
-            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='y'">
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='b'">
               <thead>
               <tr>
                 <th ng-repeat="info in tableTitle[1]">{{info}}</th>
@@ -44,6 +44,7 @@
               </thead>
               <tbody>
               <tr  ng-repeat="k in [0,1,2,3,4]">
+
                 <td ng-repeat="info in tableTitle[1]"></td>
               </tr>
               </tbody>
