--- a/beauty-project/traffic/src/main/webapp/tpl/tra/waterwayYunZheng.ship1.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/waterwayYunZheng.ship1.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="WaterwayYunZhengAuxiliaryCtrl">
+<div ng-controller="WaterwayYunZhengShip1Ctrl">
 
   <div class="wrapper bg-light lter b-b">
     <div id="myTabContent" class="tab-content" >
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class="table-responsive" style="overflow: auto">
-            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='trash'">
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='z'">
               <thead>
               <tr>
                 <th ng-repeat="info in tableTitle[0]">{{info}}</th>
@@ -36,7 +36,7 @@
               </tr>
               </tbody>
             </table>
-            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='y'">
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='f'">
               <thead>
               <tr>
                 <th ng-repeat="info in tableTitle[1]">{{info}}</th>
@@ -48,7 +48,30 @@
               </tr>
               </tbody>
             </table>
-
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='g'">
+              <thead>
+              <tr>
+                <th ng-repeat="info in tableTitle[2]">{{info}}</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr  ng-repeat="k in [0,1,2,3,4]">
+                <td ng-repeat="info in tableTitle[2]"></td>
+              </tr>
+              </tbody>
+            </table>
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold=='h'">
+              <thead>
+              <tr>
+                <th ng-repeat="info in tableTitle[3]">{{info}}</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr  ng-repeat="k in [0,1,2,3,4]">
+                <td ng-repeat="info in tableTitle[3]"></td>
+              </tr>
+              </tbody>
+            </table>
           </div>
           <footer class="panel-footer">
             <div class="row">
