--- a/beauty-project/traffic/src/main/webapp/tpl/tra/three_level_coordinated_management.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/tra/three_level_coordinated_management.html
@@ -1,6 +1,4 @@
-<div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
-    app.settings.asideFolded = false;
-    app.settings.asideDock = true;">
+<div class="hbox hbox-auto-xs hbox-auto-sm">
     <div class="wrapper-md" ng-controller="Three_level_coordinated_managementCtrl">
         <div>
             <div class="row">
