--- a/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project/traffic/src/main/webapp/tpl/blocks/nav.html
@@ -31,7 +31,7 @@
     </a>
   </li>
   <li>
-    <a href class="auto">
+    <a href class="auto" ui-sref="app.zhgj">
       <i class="glyphicon glyphicon-th-large icon text-success"></i>
       <span class="font-bold">智慧公交</span>
     </a>
