--- a/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
@@ -5,59 +5,56 @@
   <div class="wrapper bg-light lter b-b throughput" >
     <div id="myTabContent" class="tab-content" >
       <div class="tab-pane fade in active" id="home">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            常德交通信息服务平台
-          </div>
-          <div class="row wrapper">
-            <div class="col-sm-6 m-b-xs">
+
+        <div ng-if="fold==''">
+          <div class="panel panel-default" >
+            <div class="row wrapper">
+              <div class="col-sm-2  font-bold">全市泊位状况</div>
+              <div class="col-sm-4 m-b-xs">
                 <span>今日</span>
-                <span style="margin-left:20px;">本周</span>
-                <span style="margin-left:20px;" >本月</span>
-              <input type="text" class="input-sm form-control" placeholder="2018-10-23 ~ 2018-10-29" style="display: inline-block;margin-left: 20px;width:170px;">
-            </div>
-            <div class="col-sm-3">
-              <div class="input-group">
-                <span style="line-height: 30px;display: inline-block">港口企业</span>
-                <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-right:30px;">
+                <span style="margin-left:8px;">本周</span>
+                <span style="margin-left:10px;" >本月</span>
+                <input type="text" class="input-sm form-control" placeholder="2018-10-23 ~ 2018-10-29" style="display: inline-block;margin-left: 20px;width:170px;">
               </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="input-group">
-                <span style="line-height: 30px;display: inline-block">码头单位</span>
-                <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;">
-                <span class="input-group-btn">
+              <div class="col-sm-3">
+                <div class="input-group">
+                  <span style="line-height: 30px;display: inline-block;margin-left:25px;">港口企业</span>
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-left:30px;float: right;">
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="input-group">
+                  <span style="line-height: 30px;display: inline-block">码头单位</span>
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;">
+                  <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
+                </div>
               </div>
             </div>
-          </div>
-          <div ng-if="fold==''">
-            <div class="panel panel-default" >
-              <div class="panel-heading font-bold">全市泊位状况</div>
-              <div class="row">
-                <div class="col-lg-3">
-                  <div style="margin-left:30px;">
-                    <div style="margin-top:30px;">
-                      <p>累计港口泊位数</p>
-                      <p style="font-size: 30px;">4320</p>
-                      <p><span style="color:#ff6666">10%</span>&nbsp;&nbsp; 同比上月</p>
-                    </div>
-                    <div style="margin-top:30px;">
-                      <p>增加的报告期</p>
-                      <p style="font-size: 30px;">4320</p>
-                      <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
-                    </div>
-                    <div style="margin-top:30px;">
-                      <p>报废的报告期</p>
-                      <p style="font-size: 30px;">4320</p>
-                      <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
-                    </div>
+            <div class="row">
+              <div class="col-lg-3">
+                <div style="margin-left:30px;">
+                  <div style="margin-top:30px;">
+                    <p>累计港口泊位数</p>
+                    <p style="font-size: 30px;">4320</p>
+                    <p><span style="color:#ff6666">10%</span>&nbsp;&nbsp; 同比上月</p>
+                  </div>
+                  <div style="margin-top:30px;">
+                    <p>增加的报告期</p>
+                    <p style="font-size: 30px;">4320</p>
+                    <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
+                  </div>
+                  <div style="margin-top:30px;">
+                    <p>报废的报告期</p>
+                    <p style="font-size: 30px;">4320</p>
+                    <p><span style="color:#1e983b">10%</span>&nbsp;&nbsp; 同比上周</p>
                   </div>
                 </div>
-                <div class="col-lg-9">
-                  <div class="panel-body">
-                    <div ui-jq="plot" ui-options="
+              </div>
+              <div class="col-lg-9">
+                <div class="panel-body">
+                  <div ui-jq="plot" ui-options="
               [
                 { data: {{d}}, points: { show: true, radius: 6},splines: { show: true, fill: true, fillColor: { colors: [{ opacity: 0.1 }, { opacity: 0.1}] } }  }
               ],
@@ -77,56 +74,80 @@
                 tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
               }
             " style="height:320px" >
-                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="table-responsive" style="overflow: auto">
-              <table class="table table-bordered b-t b-light" style="white-space: nowrap">
-                <thead>
-                <tr>
-                  <th>序号</th>
-                  <th ng-repeat="info in tableTitle[0]">{{info}}</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr  ng-repeat="k in [0,1,2,3,4]">
-                  <td>1</td>
-                  <td ng-repeat="info in tableTitle[0]"></td>
-                </tr>
-                </tbody>
-              </table>
+          </div>
+          <div class="table-responsive" style="overflow: auto">
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap">
+              <thead>
+              <tr>
+                <th>序号</th>
+                <th ng-repeat="info in tableTitle[0]">{{info}}</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr  ng-repeat="k in [0,1,2,3,4]">
+                <td>1</td>
+                <td ng-repeat="info in tableTitle[0]"></td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+          <footer class="panel-footer">
+            <div class="row">
+              <div class="col-sm-4 hidden-xs">
+
+              </div>
+              <div class="col-sm-4 text-center">
+
+              </div>
+              <div class="col-sm-4 text-right text-center-xs">
+                <ul class="pagination pagination-sm m-t-none m-b-none">
+                  <li><a href><i class="fa fa-chevron-left"></i></a></li>
+                  <li><a href>1</a></li>
+                  <li><a href>2</a></li>
+                  <li><a href>3</a></li>
+                  <li><a href>4</a></li>
+                  <li><a href>5</a></li>
+                  <li><a href><i class="fa fa-chevron-right"></i></a></li>
+                </ul>
+              </div>
             </div>
-            <footer class="panel-footer">
-              <div class="row">
-                <div class="col-sm-4 hidden-xs">
+          </footer>
+        </div>
 
-                </div>
-                <div class="col-sm-4 text-center">
-
-                </div>
-                <div class="col-sm-4 text-right text-center-xs">
-                  <ul class="pagination pagination-sm m-t-none m-b-none">
-                    <li><a href><i class="fa fa-chevron-left"></i></a></li>
-                    <li><a href>1</a></li>
-                    <li><a href>2</a></li>
-                    <li><a href>3</a></li>
-                    <li><a href>4</a></li>
-                    <li><a href>5</a></li>
-                    <li><a href><i class="fa fa-chevron-right"></i></a></li>
-                  </ul>
+        <div ng-if="fold=='express'||fold=='a'">
+          <div class="panel panel-default">
+            <div class="row wrapper">
+              <div class="col-sm-2 font-bold" ng-if="fold=='express'">港口快报吞吐量</div>
+              <div class="col-sm-2 font-bold" ng-if="fold=='a'">港口吞吐量</div>
+              <div class="col-sm-4 m-b-xs">
+                <span>今日</span>
+                <span style="margin-left:8px;">本周</span>
+                <span style="margin-left:10px;" >本月</span>
+                <input type="text" class="input-sm form-control" placeholder="2018-10-23 ~ 2018-10-29" style="display: inline-block;margin-left: 20px;width:170px;">
+              </div>
+              <div class="col-sm-3">
+                <div class="input-group">
+                  <span style="line-height: 30px;display: inline-block;margin-left:25px;">港口企业</span>
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-left:30px;float: right;">
                 </div>
               </div>
-            </footer>
-          </div>
+              <div class="col-sm-3">
+                <div class="input-group">
+                  <span style="line-height: 30px;display: inline-block">码头单位</span>
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;">
+                  <span class="input-group-btn">
+                    <button class="btn btn-sm btn-default" type="button">搜索</button>
+                </span>
+                </div>
+              </div>
+            </div>
 
-          <div ng-if="fold=='express'||fold=='a'">
-            <div class="panel panel-default">
-              <div class="panel-heading font-bold" ng-if="fold=='express'">港口快报吞吐量</div>
-              <div class="panel-heading font-bold" ng-if="fold=='a'">港口吞吐量</div>
-              <div class="panel-body">
-                <div ui-jq="plot" ui-options="
+            <div class="panel-body">
+              <div ui-jq="plot" ui-options="
               [
                 { data: {{d0_1}}, label: '进港吞吐量', points: { show: true }, lines: { show: true, tension: 0.45, lineWidth: 2, fill: 0 } },
                 { data: {{d0_2}}, label: '出港吞吐量', points: { show: true, radius: 4 },lines: { show: true, tension: 0.45, lineWidth: 2, fill: 0 }}
@@ -144,46 +165,45 @@
                 tooltipOpts: { content: '%s of %x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
               }
             " style="height:240px"></div>
-              </div>
             </div>
-            <div class="table-responsive" style="overflow: auto">
-              <table class="table table-bordered b-t b-light" style="white-space: nowrap">
-                <thead>
-                <tr>
-                  <th>序号</th>
-                  <th ng-repeat="info in tableTitle[1]">{{info}}</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr  ng-repeat="k in [0,1,2,3,4]">
-                  <td>1</td>
-                  <td ng-repeat="info in tableTitle[1]"></td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-            <footer class="panel-footer">
-              <div class="row">
-                <div class="col-sm-4 hidden-xs">
-
-                </div>
-                <div class="col-sm-4 text-center">
-
-                </div>
-                <div class="col-sm-4 text-right text-center-xs">
-                  <ul class="pagination pagination-sm m-t-none m-b-none">
-                    <li><a href><i class="fa fa-chevron-left"></i></a></li>
-                    <li><a href>1</a></li>
-                    <li><a href>2</a></li>
-                    <li><a href>3</a></li>
-                    <li><a href>4</a></li>
-                    <li><a href>5</a></li>
-                    <li><a href><i class="fa fa-chevron-right"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </footer>
           </div>
+          <div class="table-responsive" style="overflow: auto">
+            <table class="table table-bordered b-t b-light" style="white-space: nowrap">
+              <thead>
+              <tr>
+                <th>序号</th>
+                <th ng-repeat="info in tableTitle[1]">{{info}}</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr  ng-repeat="k in [0,1,2,3,4]">
+                <td>1</td>
+                <td ng-repeat="info in tableTitle[1]"></td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+          <footer class="panel-footer">
+            <div class="row">
+              <div class="col-sm-4 hidden-xs">
+
+              </div>
+              <div class="col-sm-4 text-center">
+
+              </div>
+              <div class="col-sm-4 text-right text-center-xs">
+                <ul class="pagination pagination-sm m-t-none m-b-none">
+                  <li><a href><i class="fa fa-chevron-left"></i></a></li>
+                  <li><a href>1</a></li>
+                  <li><a href>2</a></li>
+                  <li><a href>3</a></li>
+                  <li><a href>4</a></li>
+                  <li><a href>5</a></li>
+                  <li><a href><i class="fa fa-chevron-right"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </footer>
         </div>
       </div>
     </div>
