高亮、布局、搜索

--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.other.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.other.html
@@ -16,7 +16,8 @@
             </div>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="text" class="input-sm form-control" placeholder="Search">
+                <input type="text" class="input-sm form-control" placeholder="输入水运或服务企业编号" ng-if="fold=='c'">
+                <input type="text" class="input-sm form-control" placeholder="输入人员姓名" ng-if="fold=='j'">
                 <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
