--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.ship.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.ship.html
@@ -16,7 +16,9 @@
             </div>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="text" class="input-sm form-control" placeholder="Search">
+                <input type="text" class="input-sm form-control" placeholder="输入水运或服务企业编号" ng-if="fold=='d'">
+                <input type="text" class="input-sm form-control" placeholder="输入船舶名称"  ng-if="fold=='e'">
+                <input type="text" class="input-sm form-control" placeholder="输入船舶编码"  ng-if="fold=='i'">
                 <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
