--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.waterway.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.waterway.html
@@ -8,7 +8,7 @@
           <div class="panel-heading">
             常德交通信息服务平台
           </div>
-          <div class="row wrapper">
+          <div class="row wrapper" ng-if="fold=='draft'">
             <div class="col-sm-5 m-b-xs">
 
             </div>
@@ -16,7 +16,7 @@
             </div>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="text" class="input-sm form-control" placeholder="Search">
+                <input type="text" class="input-sm form-control" placeholder="输入企业人员编号或姓名">
                 <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
