--- a/beauty-project2/tra/src/main/webapp/tpl/tra/collaborative_management.personnel.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/collaborative_management.personnel.html
@@ -4,18 +4,15 @@
 
   <div class="wrapper bg-light lter b-b">
     <div style="width:100%;" class="pre-scrollable">
-      <ul id="myTab" class="nav nav-tabs " style="overflow-x: auto;width:220%;" >
+      <ul id="myTab" class="nav nav-tabs " style="overflow-x: auto;width:224%;height:50px" >
         <li  ng-repeat="(index,info) in data.business.secondLevel" ng-class="{'active':index ==indexBtn}" ng-click="tabBtn(index)">
           <a  data-toggle="tab"> {{info}}</a>
         </li>
       </ul>
     </div>
-    <div id="myTabContent" class="tab-content" style="margin-top:30px;">
+    <div id="myTabContent" class="tab-content" >
       <div class="tab-pane fade in active" id="home">
         <div class="panel panel-default">
-          <div class="panel-heading">
-            常德交通信息服务平台
-          </div>
           <div class="row wrapper">
             <div class="col-sm-5 m-b-xs">
 
@@ -24,7 +21,7 @@
             </div>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="text" class="input-sm form-control" placeholder="Search">
+                <input type="text" class="input-sm form-control" placeholder="输入从业人员姓名或证件号">
                 <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
