--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.auxiliary.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.auxiliary.html
@@ -16,7 +16,8 @@
             </div>
             <div class="col-sm-3">
               <div class="input-group">
-                <input type="text" class="input-sm form-control" placeholder="Search">
+                <input type="text" class="input-sm form-control" placeholder="输入企业管理机构编号" ng-if="fold=='trash'">
+                <input type="text" class="input-sm form-control" placeholder="输入从业人员姓名" ng-if="fold=='y'">
                 <span class="input-group-btn">
                     <button class="btn btn-sm btn-default" type="button">搜索</button>
                 </span>
