--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/nav.html
@@ -18,7 +18,7 @@
   </li>
 
   <li>
-    <a href class="auto">
+    <a href class="auto" ui-sref="app.highway">
       <b class="badge bg-info pull-right">3</b>
       <i class="glyphicon glyphicon-th"></i>
       <span>公路交通</span>
