页面与日期

--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -6,12 +6,22 @@
   <meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/daterangepicker.css">
+  <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="css/animate.css" type="text/css" />
   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
   <link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="css/font.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
   <link rel="stylesheet" href="css/style.css" type="text/css" />
+
+
+
+
+
+
+
 </head>
 <body ng-controller="AppCtrl">
   <div class="app" id="app" ng-class="{'app-header-fixed':app.settings.headerFixed, 'app-aside-fixed':app.settings.asideFixed, 'app-aside-folded':app.settings.asideFolded,
@@ -23,7 +33,6 @@
 
   <!-- Angular -->
   <script src="vendor/angular/angular.js"></script>
-  
   <script src="vendor/angular/angular-animate/angular-animate.js"></script>
   <script src="vendor/angular/angular-cookies/angular-cookies.js"></script>
   <script src="vendor/angular/angular-resource/angular-resource.js"></script>
@@ -62,7 +71,16 @@
   <script src="js/directives/ui-shift.js"></script>
   <script src="js/directives/ui-toggleclass.js"></script>
   <script src="js/directives/ui-validate.js"></script>
-  <script src="js/controllers/bootstrap.js"></script>
+  <script src="js/directives/selDate.js"></script>
+  <script  src="js/controllers/bootstrap.js"></script>
+  <script  src="js/controllers/moment.js"></script>
+  <script  src="js/controllers/daterangepicker.js"></script>
+  <script  src="js/controllers/bootstrap-datetimepicker.js"></script>
+  <script  src="js/controllers/bootstrap-datetimepicker.zh-CN.js"></script>
+
+
+
+
   <!-- Lazy loading -->
 </body>
 </html>
