--- a/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.port.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.port.html
@@ -11,7 +11,6 @@
           </div>
           <div >
             <div class="panel panel-default">
-
             <div class="table-responsive" style="overflow: auto" >
               <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold == 'starred'">
                 <thead>
@@ -76,4 +75,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
