--- a/beauty-project2/tra/src/main/webapp/tpl/page_signin.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/page_signin.html
@@ -10,7 +10,7 @@
       </div>
       <div class="list-group list-group-sm">
         <div class="list-group-item">
-          <input type="text" placeholder="用户名" class="form-control no-border" ng-model="user.email" required>
+          <input type="text" placeholder="用户名" class="form-control no-border" ng-model="user.username" required>
         </div>
         <div class="list-group-item">
            <input type="password" placeholder="密码" class="form-control no-border" ng-model="user.password" required>
