选择年月的时间范围 与 智慧交通

--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/font.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
   <link rel="stylesheet" href="css/style.css" type="text/css" />
-
+  <link rel="stylesheet" href="http://www.nbmap.gov.cn/leaflet/leaflet.css">
 
 
 
@@ -30,6 +30,7 @@
 
   <!-- jQuery -->
   <script src="vendor/jquery/jquery.min.js"></script>
+
 
   <!-- Angular -->
   <script src="vendor/angular/angular.js"></script>
@@ -59,7 +60,6 @@
   <script src="js/config.router.js"></script>
   <script src="js/main.js"></script>
   <script src="js/services/ui-load.js"></script>
-  <script src="js/services/traGlobal.js"></script>
   <script src="js/filters/fromNow.js"></script>
   <script src="js/directives/setnganimate.js"></script>
   <script src="js/directives/ui-butterbar.js"></script>
@@ -78,10 +78,11 @@
   <script  src="js/controllers/daterangepicker.js"></script>
   <script  src="js/controllers/bootstrap-datetimepicker.js"></script>
   <script  src="js/controllers/bootstrap-datetimepicker.zh-CN.js"></script>
-
-
-
-
+  <script src="http://www.nbmap.gov.cn/leaflet/leaflet.js"></script>
+  <!--<script  src="js/controllers/leaflet-tilelayer-wmts.js"></script>
+  <script  src="js/controllers/leaflet-tilelayer-wmts-src.js"></script>-->
+  <!--<script src="http://nb.nbmap.gov.cn/scripts/lib/mapAPI/layer.wmts-src.js"></script>
+  <script src="http://nb.nbmap.gov.cn/scripts/lib/mapAPI/layer.tdt-src.js"></script>-->
   <!-- Lazy loading -->
 </body>
 </html>
