--- a/beauty-project2/tra/src/main/webapp/index.html
+++ b/beauty-project2/tra/src/main/webapp/index.html
@@ -60,6 +60,7 @@
   <script src="js/config.router.js"></script>
   <script src="js/main.js"></script>
   <script src="js/services/ui-load.js"></script>
+  <script src="js/services/traGlobal.js"></script>
   <script src="js/filters/fromNow.js"></script>
   <script src="js/directives/setnganimate.js"></script>
   <script src="js/directives/ui-butterbar.js"></script>
