省客运联网售票系统

--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/nav.html
@@ -56,7 +56,7 @@
     </a>
   </li>
   <li>
-    <a href class="auto">
+    <a href class="auto" ui-sref="app.kylwsp">
       <i class="glyphicon glyphicon-th-large icon text-success"></i>
       <span class="font-bold">省客运联网售票系统</span>
     </a>
